--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   		<java-version>1.8</java-version>
-		<org.springframework-version>5.2.12.RELEASE</org.springframework-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
+		<org.springframework-version>5.2.12.RELEASE</org.springframework-version> 
+		<org.aspectj-version>1.6.10</org.aspectj-version> 
 		<org.slf4j-version>1.7.30</org.slf4j-version>
 		<com.google.code.gson-version>2.8.6</com.google.code.gson-version>
 		<org.mybatis-version>3.5.6</org.mybatis-version>
@@ -21,8 +21,7 @@
 		<com.zaxxer.HikariCP-version>3.4.5</com.zaxxer.HikariCP-version>
 		<com.oracle.ojdbc6-version>11.2.0.4</com.oracle.ojdbc6-version>
 		<ch.qos.logback-version>1.2.3</ch.qos.logback-version>
-		<jackson-version>2.12.1</jackson-version>
-	</properties>
+		<jackson-version>2.12.1</jackson-version> </properties>
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
@@ -131,6 +130,27 @@
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
 		</dependency-->
+		
+		<!-- 웹소켓 설정 추가 시작 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-websocket</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-context-support</artifactId>
+		    <version>${org.springframework-version}</version>
+		</dependency>
+		
+		<!-- 웹소켓 설정 추가 종료 -->
 				
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -138,8 +158,9 @@
 			<version>1.2</version>
 		</dependency>
 	</dependencies>
+	
     <build>
-    	<sourceDirectory>src/java</sourceDirectory>
+    	
     	<plugins>
 	      	<plugin>
 		        <artifactId>maven-compiler-plugin</artifactId>
@@ -149,7 +170,7 @@
 		          	<target>1.8</target>
 		        </configuration>
 	      	</plugin>
-	      	
+<!-- 		      	
 	      	<plugin>
 		    	<groupId>org.apache.maven.plugins</groupId>
 		      	<artifactId>maven-dependency-plugin</artifactId>
@@ -166,13 +187,21 @@
 		               		<overWriteReleases>false</overWriteReleases>
 		               		<overWriteSnapshots>false</overWriteSnapshots>
 		               		<overWriteIfNewer>true</overWriteIfNewer>
-		               		<includeScope>runtime</includeScope>
-		               		<excludeScope>provided</excludeScope> 
 		            	</configuration>
 		        	</execution>
 		      	</executions>
 	    	</plugin>
+ -->	    	
+ 	        <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
 	    </plugins>
 	    <finalName>${project.artifactId}</finalName>
   	</build>
 </project>
+
