--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # User specified
 /src/main/webapp/WEB-INF/views/resources/upload/
 /src/main/webapp/WEB-INF/lib/
+src/main/webapp/WEB-INF/views/resources/upload/
+src/main/webapp/WEB-INF/lib/
 src/main/webapp/resources/
 /upload/
 
