Add target/ to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,9 @@ src/main/webapp/resources/
 
 # 빌드 결과물 무시
 /target/
+target/
 /build/
+build/
 .gradle/
 *.class
 *.jar                                     
